Delete implementado, refatorado os objetos de validação,
