# backend/src/routes.js
@@ -4,6 +4,8 @@ const CurrenciesController = require('./app/controllers/CurrenciesController')
 
 routes.post('/currency',CurrenciesController.makeNewCurrency)
 routes.patch('/currency/:id',CurrenciesController.updateCurrency)
+routes.delete('/currency/:id',CurrenciesController.deleteCurrency)
+
 routes.get('/currency/list',CurrenciesController.getAllCurrency)
 routes.get('/currency/:code',CurrenciesController.getCurrency)
 routes.get('/currency/transform/:from/:to/:amount',CurrenciesController.transform)
